<resources>
    <string name="app_name">CarStore</string>
    <string name="cars">Cars</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="select_language">Select Language</string>
    <string name="lbl_continue">Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="enter_fullname">Enter fullname</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="total_price">Total Price: $%1$s</string>
    <string name="primary_price">Primary Price: $%1$s</string>
    <string name="car_model">Car Model: %1$s</string>
    <string name="i_haven_t_account_create_new">I haven\'t account. Create New.</string>
    <string name="register_manager">Register Manager</string>
    <string name="car_list">Car List</string>
    <string name="place_an_order">Place an order</string>
    <string name="color_1">Color + 1%</string>
    <string name="engine_type_1">Engine Type + 1%</string>
    <string name="remote_control_0_5">Remote Control + 0.5%</string>
    <string name="soundproof_1">Soundproof + 1%</string>
    <string name="wheel_disk_1">Wheel Disk + 1%</string>
    <string name="video_recorder_0_1">Video Recorder + 0.1%</string>
    <string name="tinting_0_2">Tinting + 0.2%</string>
    <string name="sunroof_0_2">Sunroof + 0.2%</string>
    <string name="lbl_total_price">Total Price</string>
    <string name="lbl_primary_price">Primary Price</string>
    <string name="period">Period</string>
    <string name="loan_percentage">Loan percentage</string>
    <string name="credit">Credit</string>
    <string name="by_cash">By Cash</string>
    <string name="count">Count</string>
    <string name="discount">Discount</string>
    <string name="calculate_price">Calculate Price</string>
    <string name="customer_information">Customer Information</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="surname">Surname</string>
    <string name="enter_your_surname">Enter your Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="about_manager">About Manager</string>
    <string name="customer_name">Customer name:</string>
    <string name="customer_number">Customer number:</string>
    <string name="car_model_2">Car Model:</string>
    <string name="car_color">Car Color:</string>
    <string name="engine_type">Engine Type</string>
    <string name="remote_controller">Remote Controller</string>
    <string name="soundroof">Soundroof</string>
    <string name="primary_price_2">Primary Price:</string>
    <string name="total_price_2">Total Price:</string>
    <string name="order">ORDER</string>
    <string name="orders_list">Orders List</string>
</resources>