<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">

        <TextView
            android:fontFamily="@font/inter_bold"
            android:id="@+id/lbl_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_customer_name"
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sukhrob Ergashev"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_customer_name"
            app:layout_constraintStart_toEndOf="@+id/lbl_customer_name"
            app:layout_constraintTop_toTopOf="@+id/lbl_customer_name" />

        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="4dp"
            android:id="@+id/lbl_customer_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_customer_name" />

        <TextView
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="8dp"
            android:id="@+id/text_customer_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+998 93 355 88 89"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_customer_number"
            app:layout_constraintStart_toEndOf="@+id/lbl_customer_number"
            app:layout_constraintTop_toTopOf="@+id/lbl_customer_number" />

        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="4dp"
            android:id="@+id/lbl_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_model_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_customer_number" />

        <TextView
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="8dp"
            android:id="@+id/text_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Malibu 2"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_car_model"
            app:layout_constraintStart_toEndOf="@+id/lbl_car_model"
            app:layout_constraintTop_toTopOf="@+id/lbl_car_model" />

        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="4dp"
            android:id="@+id/lbl_car_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_car_model" />

        <TextView
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="8dp"
            android:id="@+id/text_car_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="blue"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_car_color"
            app:layout_constraintStart_toEndOf="@+id/lbl_car_color"
            app:layout_constraintTop_toTopOf="@+id/lbl_car_color" />

        <TextView
            android:id="@+id/lbl_engine_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/engine_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_car_color" />

        <TextView
            android:id="@+id/text_engine_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="automatic"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_engine_type"
            app:layout_constraintStart_toEndOf="@+id/lbl_engine_type"
            app:layout_constraintTop_toTopOf="@+id/lbl_engine_type" />

        <TextView
            android:id="@+id/lbl_remote_controller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/remote_controller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_engine_type" />

        <TextView
            android:id="@+id/text_remote_controller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="Installed"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_remote_controller"
            app:layout_constraintStart_toEndOf="@+id/lbl_remote_controller"
            app:layout_constraintTop_toTopOf="@+id/lbl_remote_controller" />

        <TextView
            android:id="@+id/lbl_soundroof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/soundroof"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_remote_controller" />

        <TextView
            android:id="@+id/text_soundroof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="Installed"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_soundroof"
            app:layout_constraintStart_toEndOf="@+id/lbl_soundroof"
            app:layout_constraintTop_toTopOf="@+id/lbl_soundroof" />

        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="4dp"
            android:id="@+id/lbl_primary_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_price_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_soundroof" />

        <TextView
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="8dp"
            android:id="@+id/text_primary_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" $23500"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_primary_price"
            app:layout_constraintStart_toEndOf="@+id/lbl_primary_price"
            app:layout_constraintTop_toTopOf="@+id/lbl_primary_price" />

        <TextView
            android:id="@+id/lbl_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/total_price_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_primary_price" />

        <TextView
            android:id="@+id/text_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter_medium"
            android:text=" $26300"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_total_price"
            app:layout_constraintStart_toEndOf="@+id/lbl_total_price"
            app:layout_constraintTop_toTopOf="@+id/lbl_total_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>